# spin-message-trigger

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose-dev.yaml  spin-pluginify.toml  spin.toml  update-plugin.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  rust.yml  test.yml
example-app/: Cargo.toml  spin.toml
example-app/src/: lib.rs
queue-app/: Cargo.toml
queue-app/src/: lib.rs
request-response-demo/: Cargo.toml
request-response-demo/src/: lib.rs
spin-message-trigger/: Cargo.toml  messages.wit  spin-pluginify.toml
spin-message-trigger/src/: broker.rs  gateway.rs  in_memory_broker.rs  main.rs  wit.rs
spin-message-types/: Cargo.toml  exported.wit
spin-message-types/macro/: Cargo.toml
spin-message-types/macro/src/: lib.rs
spin-message-types/src/: export.rs  import.rs  lib.rs  runtime.rs
spin-message-types/wit/: messages.wit  spin-message-trigger.wit
spin-message-types/wit-message/: spin-message-trigger.wit
templates/broker-gateway/metadata/: spin-template.toml
templates/broker-gateway/metadata/snippets/: component.txt
templates/message-app/content/: Cargo.toml  spin.toml
templates/message-app/metadata/: spin-template.toml
templates/message-component/content/: Cargo.toml
templates/message-component/content/src/: lib.rs
templates/message-component/metadata/: spin-template.toml
templates/message-component/metadata/snippets/: component.txt
templates/mqtt-broker/metadata/: spin-template.toml
templates/mqtt-broker/metadata/snippets/: component.txt
templates/nats-broker/metadata/: spin-template.toml
templates/nats-broker/metadata/snippets/: component.txt
templates/queue-component/content/: Cargo.toml
templates/queue-component/metadata/: spin-template.toml
templates/queue-component/metadata/snippets/: component.txt
templates/redis-broker/metadata/: spin-template.toml
templates/redis-broker/metadata/snippets/: component.txt
templates/request-response-message-component/content/: Cargo.toml
templates/request-response-message-component/metadata/: spin-template.toml
templates/request-response-message-component/metadata/snippets/: component.txt
thunder-tests/: thunderActivity.json  thunderCollection.json  thunderclient.json
trigger-message/: Cargo.toml  spin-pluginify.toml
trigger-message/src/: broker.rs  configs.rs  gateway.rs  in_memory_broker.rs  lib.rs  main.rs  message_trigger.rs  mqtt_broker.rs  nats_broker.rs  redis_broker.rs
