[workspace]
resolver = "2"
members = [
    "trigger-message",
    "spin-message-types",
    "example-app",
    "queue-app",
    "request-response-demo"
]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
serde = "1"
tokio = { version = "1" }
http-serde = "2"
serde_json = "1"
rmp-serde = "1"
bytes = "1"
http = "1"
spin-core = { git = "https://github.com/fermyon/spin"}
spin-app = { git = "https://github.com/fermyon/spin"}
spin-trigger = { git = "https://github.com/fermyon/spin"}
spin-sdk = { git = "https://github.com/fermyon/spin"}
