[package]
name = "queue-app"
authors = ["lee-orr <lee-orr@users.noreply.github.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin" }
spin-message-types = { path = "../spin-message-types", features = ["import"], default-features=false }
wit-bindgen = "0.6.0"

