[package]
name = "request-response-demo"
authors = ["lee-orr <lee-orr@users.noreply.github.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = { workspace = true }
# Crate to simplify working with bytes.
bytes  = { workspace = true }
# The Spin SDK.
spin-sdk = { workspace = true }
spin-message-types = { path = "../spin-message-types", features = ["import"], default-features=false }
http = { workspace = true }

linkme = { workspace = true }