[package]
name = "spin-message-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["export"]
export = ["dep:wit-bindgen-wasmtime"]
import = ["dep:message-macro"]

[dependencies]
message-macro = { path = "macro", optional = true }
serde = { version = "1", features=["derive"] }
anyhow = "*"
http = "0.2"
http-serde = "1"
serde_json = "1"
rmp-serde = "1"

[dependencies.wit-bindgen-wasmtime]
git = "https://github.com/fermyon/wit-bindgen-backport"
rev = "b97517c7bfcc82f3cd6e730270d40cd4781aa789"
features = ["async"]
optional = true
