[package]
name = "spin-message-types"
version = "0.1.0"
edition = "2021"

[features]
default = ["export"]
export = ["dep:wasmtime"]
import = ["dep:message-macro", "dep:wit-bindgen", "dep:wit-bindgen-rust"]

[dependencies]
message-macro = { path = "macro", optional = true }
serde = { version = "1", features=["derive"] }
anyhow = "*"
http = "0.2"
http-serde = "1"
serde_json = "1"
rmp-serde = "1"
wasmtime = { version = "8.0.1", features = ["component-model"], optional = true }
wit-bindgen = { version = "0.6", optional = true }
wit-bindgen-rust = { version = "0.6", optional = true }
tokio = { version = "*", features = ["rt"]}