[package]
name = "spin-message-types"
version = "0.1.0"
edition = "2021"

[features]
default = ["import", "export"]
export = ["dep:wasmtime"]
import = ["dep:message-macro", "dep:wit-bindgen", "dep:wit-bindgen-rust"]

[dependencies]
message-macro = { path = "macro", optional = true }
serde = { workspace = true, features=["derive"] }
anyhow = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
wasmtime = { version = "15.0.0", features = ["component-model"], optional = true }
wit-bindgen = { version = "0.15", optional = true }
wit-bindgen-rust = { version = "0.15", optional = true }
tokio = { workspace = true, features = ["rt"]}
