[package]
name = "trigger-message"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "bin/gateway.rs"


[dependencies]
anyhow = "1.0.68"
async-trait = "0.1"
clap = { version = "3.1.15", features = ["derive", "env"] }
futures = "0.3.25"
serde = "1.0"
spin-core = { git = "https://github.com/fermyon/spin"}
spin-app = { git = "https://github.com/fermyon/spin"}
spin-trigger = { git = "https://github.com/fermyon/spin" }
tokio = { version = "1.11", features = [ "full" ] }
tokio-scoped = "0.2.0"
dashmap = "5"
axum = { version = "0.6", features = ["ws"] }
spin-message-types = { path = "../spin-message-types", features = ["export"] }
serde_json = "*"
rmp-serde = "*"
wildmatch = "2"
redis = { version = "0.23", features = [ "tokio-comp", "aio" ] }
async-nats = "0.29"
nkeys = "0.2"
ulid = "1"
serde_qs = "*"
http = "0.2"
crossbeam-queue = "0.3"
rsmq_async = "*"
rumqttc = { version = "0.21", features = ["url"] }